Keep markup when toggling TextEdit.format: AutoText / PlainText

This is useful when writing an editor that allows you to do wysiwyg
editing or raw HTML/markdown. Usually you want `format: AutoText`
because you don't know what the user is going to load, and we expect
QQuickTextDocumentPrivate::load() to find the type from the URL
extension (since b46d6a75ac16089de1a29c773e7594a82ffea13e). Then if
the user toggles format to PlainText, that's assumed to be for the
purpose of raw viewing or editing, not for the purpose of removing
the formatting. (Switching to plain text can be accomplished by
`textEdit.text = textEdit.getText(0, textEdit.length)` .)

We adjust tst_qquicktextdocument::overrideTextFormat() slightly:
loading an html document as AutoText and then converting to HTML
no longer emits the textChanged signal (it's not really a conversion).
Likewise, converting markdown loaded as AutoText to explicit markdown
should not need to emit the textChanged signal.

Amends fdbacf2d5c0a04925bcb3aecd7bf47da5fb69227

Done-with: Oliver Eftevaag <oliver.eftevaag@qt.io>
Fixes: QTBUG-122985
Task-number: QTBUG-120772
Change-Id: I1d43b5e5662197dfeb1a93a2d1f638a193aa66b2
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>
(cherry picked from commit bc1bdd0e15ad1fbc1ffb2af666b0ca5676858ee0)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 206a1fa2a4c1f04421cc2a80c4f3e329495d9d38)
Reviewed-by: Jani Heikkinen <jani.heikkinen@qt.io>